# macro_analyst_agent

./: .env.example  .gitignore  2025-11-18-macro-ai-agent-project.md  DATA_SCHEMA.md  DEVELOPMENT_ROADMAP.md  PROJECT_PLAN.md  README.md  macro_ai_agent_intro.md  pyproject.toml
data/raw/: economic_data.json  news_articles.json
dev_log/: 2025-11-18-initial-setup-log-17-30.md
notebooks/: 00_data_processing_pipeline_demo.ipynb
prd_docs/: DATA_SOURCES.md  DATA_STRATEGY.md  PROMPT_STRATEGY.md  README.md  REASONING_FRAMEWORKS.md  SYSTEM_PROMPTS.md  TOOLS_STRATEGY.md
scripts/: generate_fake_data.py  test_cycle.py
