[project]
name = "macro-ai-agent"
version = "0.1.0"
description = "AI-powered macro economist agent that transforms complex economic information into personalized portfolio insights"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["ai", "macro", "economics", "finance", "portfolio", "agent", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",

    # LLM & AI
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langgraph>=0.0.20",
    "anthropic>=0.18.0",

    # Vector Store & Database
    "supabase>=2.3.0",
    "pgvector>=0.2.4",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.25",

    # Data Ingestion
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.12.3",
    "requests>=2.31.0",
    "httpx>=0.26.0",
    "aiohttp>=3.9.3",

    # Economic Data APIs
    "fredapi>=0.5.1",
    "pandas>=2.2.0",
    "numpy>=1.26.3",

    # PDF Processing
    "PyMuPDF>=1.23.21",
    "pypdf>=4.0.1",

    # CLI & UI
    "typer>=0.9.0",
    "rich>=13.7.0",
    "streamlit>=1.31.0",
    "plotly>=5.18.0",
    "altair>=5.2.0",

    # Utilities
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "tenacity>=8.2.3",
    "python-dateutil>=2.8.2",
    "pytz>=2024.1",

    # Logging & Monitoring
    "loguru>=0.7.2",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.4",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.26.0",  # for FastAPI testing

    # Code Quality
    "ruff>=0.2.1",
    "black>=24.1.1",
    "mypy>=1.8.0",
    "isort>=5.13.2",

    # Jupyter
    "jupyter>=1.0.0",
    "jupyterlab>=4.1.0",
    "ipykernel>=6.29.0",
    "ipywidgets>=8.1.1",

    # Development Tools
    "pre-commit>=3.6.0",
    "python-semantic-release>=8.7.0",
]

vite = [
    # For Vite frontend development (separate from Python)
    # These are just placeholders - actual npm packages listed in frontends/vite-app/package.json
]

[project.scripts]
macro = "frontends.cli.main:app"
macro-api = "src.api.main:start"
macro-ingest = "src.ingestion.main:run"

[project.urls]
Homepage = "https://github.com/yourusername/macro-ai-agent"
Documentation = "https://github.com/yourusername/macro-ai-agent/blob/main/README.md"
Repository = "https://github.com/yourusername/macro-ai-agent"
Issues = "https://github.com/yourusername/macro-ai-agent/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "frontends"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.4",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.1",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["S101"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | frontends/vite-app
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "feedparser.*",
    "fredapi.*",
    "supabase.*",
    "langchain.*",
    "langgraph.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--verbose",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/frontends/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
